[package]
name = "nbtworkbench"
version = "1.4.0"
edition = "2021"
description = "A modern NBT Editor written in Rust designed for performance and efficiency."
license-file = "LICENSE"
repository = "https://github.com/RealRTTV/nbtworkbench"
keywords = ["nbt", "window", "unsafe", "editor", "tree"]
categories = ["graphics", "rendering", "text-editors", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Wasm Only
#[lib]
#crate-type = ["cdylib", "rlib"]
#path = "src/main.rs"

# Windows Only
[package.metadata.winres]

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
debug = false
lto = "fat"
panic = "abort"

[profile.release.build-override]
opt-level = 3
strip = true
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.flame]
inherits = "release"
strip = false
debug = true

[profile.flame.build-override]
inherits = "release"
strip = false
debug = true

[build-dependencies]
flate2 = "1.0.27"
winres = "0.1.12"

[dependencies]
zune-inflate = { version = "0.2.54", features = ["gzip", "zlib"] }
flate2 = "1.0.31"
winit = "0.30.5"
wgpu = { version = "22.1.0", default-features = false, features = ["webgl", "wgsl", "dx12", "metal"] }
fxhash = "0.2.1"
hashbrown = { version = "0.14.5", features = ["raw", "inline-more", "nightly"], default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }
notify = "6.1.1"
uuid = { version = "1.10.0", features = ["v4"] }
compact_str = "0.8.0"
wgsl-inline = { version = "0.2.1", features = ["minify"] }
static_assertions = "1.1.0"
anyhow = "1.0.86"
lz4_flex = { version = "0.11.3", default-features = false, features = ["std", "nightly"] }
regex = "1.10.6"
glob = "0.3.1"
zune-png = { version = "0.4.10", features = [] }
polonius-the-crab = "0.4.1"
enum-map = "3.0.0-beta.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cli-clipboard = "0.4.0"
pollster = "0.3.0"
native-dialog = "0.7.0"
dirs = "5.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "=0.3.69", features = ["console", "Document", "Window", "Element", "Clipboard", "DateTimeValue", "HtmlElement", "HtmlDocument", "HtmlTextAreaElement", "Blob", "HtmlAreaElement", "Url", "Storage"] }
