[package]
name = "nbtworkbench"
version = "1.6.3"
edition = "2024"
description = "A modern NBT Editor written in Rust designed for performance and efficiency."
license-file = "LICENSE"
repository = "https://github.com/RealRTTV/nbtworkbench"
keywords = ["nbt", "window", "unsafe", "editor", "tree"]
categories = ["graphics", "rendering", "text-editors", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Wasm Only
#[lib]
#crate-type = ["cdylib", "rlib"]
#path = "src/main.rs"

# Windows Only
[package.metadata.winres]

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
debug = false
lto = "fat"
panic = "abort"

[profile.release.build-override]
opt-level = 3
strip = true
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.flame]
inherits = "release"
strip = false
debug = true

[profile.flame.build-override]
inherits = "release"
strip = false
debug = true

[build-dependencies]
flate2 = "1.0.27"
winres = "0.1.12"

[dependencies]
zune-inflate = { version = "0.2.54", features = ["gzip", "zlib"] }
flate2 = "1.1.1"
winit = "0.30.10"
wgpu = { version = "25.0.0", default-features = false, features = ["webgl", "wgsl", "dx12", "metal", "vulkan"] }
fxhash = "0.2.1"
hashbrown = { version = "0.15.3", features = ["inline-more", "nightly"], default-features = false }
notify = "8.0.0"
uuid = { version = "1.16.0", features = ["v4"] }
compact_str = "0.9.0"
wgsl-inline = { version = "0.2.1", features = ["minify"] }
static_assertions = "1.1.0"
anyhow = "1.0.98"
lz4_flex = { version = "0.11.3", default-features = false, features = ["std", "nightly"] }
regex = "1.11.1"
glob = "0.3.2"
zune-png = { version = "0.4.10", features = [] }
enum-map = "3.0.0-beta.2"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
itertools = "0.14.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cli-clipboard = "0.4.0"
pollster = "0.4.0"
native-dialog = "0.9.0"
dirs = "6.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.72", features = ["console", "Document", "Window", "Element", "Clipboard", "DateTimeValue", "HtmlElement", "HtmlDocument", "HtmlTextAreaElement", "Blob", "HtmlAreaElement", "Url", "Storage"] }
getrandom = { version = "=0.2.15", features = ["js"] }
console_error_panic_hook = "0.1.7"
